# ai-dev-tools-zoomcamp

./: render.yaml
ai-dev-tools-zoomcamp/: render.yaml
ai-dev-tools-zoomcamp/02-coding-interview-app/backend/: dump_openapi.py  entrypoint.sh  openapi.json  pyproject.toml  seed_db.py
ai-dev-tools-zoomcamp/02-coding-interview-app/backend/alembic/: env.py
ai-dev-tools-zoomcamp/02-coding-interview-app/backend/alembic/versions/: 23e25d3fb070_create_interview_sessions_table.py
ai-dev-tools-zoomcamp/02-coding-interview-app/backend/app/: database.py  main.py  models.py
ai-dev-tools-zoomcamp/02-coding-interview-app/backend/app/routers/: execution.py  sessions.py  websocket.py
ai-dev-tools-zoomcamp/02-coding-interview-app/backend/tests/: conftest.py  test_api.py  test_database.py  test_websocket.py
ai-dev-tools-zoomcamp/capstone_project/: .dockerignore  .env.example  AGENT.md  Dockerfile  QA.md  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
ai-dev-tools-zoomcamp/capstone_project/backend/: QA.md
ai-dev-tools-zoomcamp/capstone_project/backend/core/: permissions.py  tests.py
ai-dev-tools-zoomcamp/capstone_project/backend/production_tracking/: settings.py  urls.py
ai-dev-tools-zoomcamp/capstone_project/core/: models.py  serializers.py  urls.py  views.py
ai-dev-tools-zoomcamp/capstone_project/frontend/: Dockerfile  package.json  vite.config.js
ai-dev-tools-zoomcamp/capstone_project/frontend/src/: App.jsx  App.test.jsx  api.js
ai-dev-tools-zoomcamp/capstone_project/production_tracking/: asgi.py  settings.py  urls.py  wsgi.py
(+41 files in other folders)
